# gelato

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt  build_debug.bat
sandbox/: sandbox.cpp  stb_image.c  stb_image.h
source/: animation.c  animation.h  gelato.h  gelato.hpp  gelato89.h  gelato89.hpp  hash.c  hash.h  platform.c  platform.h  renderer.c  renderer.h  sprite.c  sprite.h  texture.c  texture.h  utils.c  utils.h
tools/content_package_tool/: cpt.cpp  glob.c  glob.h
tools/content_package_tool/sol/: sol.hpp
